<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      tools:layout_editor_absoluteX="164dp"
      tools:layout_editor_absoluteY="224dp">

    <TextView
        android:id="@+id/textViewStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/yellowtail"
        android:text="@string/start_time"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextStartTime"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_start_time"
        android:inputType="date|time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etLatMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/enter_min_lat"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextKeyword"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etLatMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Enter maximum latitude"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLatMin"
        tools:ignore="HardcodedText"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etLongMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Enter minimum longitude"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLatMax"
        tools:ignore="HardcodedText"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etLongMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Enter maximum longitude"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLongMin"
        tools:ignore="HardcodedText"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textViewEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/yellowtail"
        android:text="@string/end_time"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextEndTime"
        app:layout_constraintTop_toBottomOf="@+id/textViewStartTime" />

    <EditText
        android:id="@+id/editTextEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Enter end time"
        android:inputType="date|time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextStartTime"
        tools:ignore="HardcodedText"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textViewKeyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/yellowtail"
        android:text="@string/keyword"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextKeyword"
        app:layout_constraintTop_toBottomOf="@+id/textViewEndTime" />

    <EditText
        android:id="@+id/editTextKeyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Enter keywords"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEndTime"
        tools:ignore="HardcodedText"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textViewKeyword3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/yellowtail"
        android:text="@string/max_lat"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/etLatMax"
        app:layout_constraintTop_toBottomOf="@+id/textViewKeyword4" />

    <TextView
        android:id="@+id/textViewKeyword4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/yellowtail"
        android:text="@string/min_lat"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/etLatMin"
        app:layout_constraintTop_toBottomOf="@+id/textViewKeyword" />

    <Button
        android:id="@+id/buttonOkay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#1C88DF"
        android:onClick="go"
        android:text="@string/okay"
        app:backgroundTint="#2196f3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#1C88DF"
        android:onClick="cancel"
        android:text="@string/cancel"
        app:backgroundTint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonOkay" />

    <TextView
        android:id="@+id/textViewKeyword5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/yellowtail"
        android:text="@string/min_lat"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/etLongMin"
        app:layout_constraintTop_toBottomOf="@+id/textViewKeyword3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/yellowtail"
        android:text="@string/max_long"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/etLongMax"
        app:layout_constraintTop_toBottomOf="@+id/textViewKeyword5" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>