<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="2dp"
    android:layout_marginLeft="2dp"
    tools:context=".Gallery">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="161dp"
            android:background="#D2A1C7D8"
            android:orientation="vertical">


            <ImageView
                android:layout_width="152dp"
                android:layout_height="145dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/profile_pic"
                android:foreground="@drawable/avatar"
                tools:srcCompat="@tools:sample/avatars"
                tools:targetApi="m"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="165dp"
                android:layout_marginLeft="165dp"
                android:layout_marginTop="-130dp"
                android:text="@string/name"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginStart="250dp"
                android:layout_marginLeft="250dp"
                android:layout_marginTop="-28dp"
                android:background="#D2A1C7D8"
                android:contentDescription="@string/edit_icon"
                app:srcCompat="@android:drawable/ic_menu_edit" />

            <TextView
                android:layout_width="174dp"
                android:layout_height="34dp"
                android:layout_marginStart="165dp"
                android:layout_marginLeft="165dp"
                android:layout_marginTop="5dp"
                android:text="@string/photographer_info" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButtonSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#D2A1C7D8"
                android:contentDescription="@string/search_icon"
                android:onClick="onButtonClick_search"
                app:srcCompat="@android:drawable/ic_menu_search" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#D2A1C7D8"
                android:contentDescription="@string/upload_icon"
                android:onClick="onButtonClick_share"
                app:srcCompat="@android:drawable/ic_menu_upload" />

        </LinearLayout>
        <FrameLayout
            android:layout_width="390dp"
            android:layout_height="270dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp">


        <ImageView
            android:id="@+id/imageViewPic"
            android:layout_width="334dp"
            android:layout_height="246dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/gallery_pic"
            tools:srcCompat="@tools:sample/avatars" />

        <VideoView
                android:id="@+id/videoView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/VideoView_gallery" />
        </FrameLayout>

        <TextView
            android:id="@+id/tvWeather"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            android:text="@string/weather" />

        <TextView
            android:id="@+id/textViewTimeStamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="10dp"
            android:text="@string/time_stamp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextCaption"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginLeft="110dp"
            android:hint="@string/edit_icon"
            android:inputType="textPersonName"
            android:text="@string/caption"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:background="#1C88DF"
                android:onClick="onButtonClick_camera"
                android:text="@string/snap"
                app:backgroundTint="#2196f3"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:background="#FFFFFF"
                android:onClick="onButtonClick_delete"
                android:text="@string/delete"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:background="#1C88DF"
                android:onClick="takeVideo"
                android:text="@string/button_video"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="21dp"
            android:text="@string/longitude" />

        <TextView
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="-18dp"
            android:text="@string/longitude" />

        <TextView
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="-18dp"
            android:text="@string/latitude" />

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="-21dp"
            android:text="@string/latitude" />

        <!--set text in edit text-->

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
