...
            android:textColor="#F44336"
            android:textSize="50sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="196dp"
            android:layout_height="55dp"
            android:layout_marginStart="89dp"
            android:layout_marginLeft="89dp"
            android:layout_marginTop="0dp"
            android:onClick="onButtonClick"
...
